Apply auto overflow to HTML view to fix bottom padding

--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,7 @@ body {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   font-size: 1.9em;
+  overflow: auto;
   padding: 1em;
   max-width: 100%;
 }
